trying to get all episodes and get only bests episodes by imdb rate